projects/bot_eval_run/batch_1770643297744/node-api-oracle_run_02/iterations/06/cmd_node_--test_tests_oracle.test.js.stdout.txt
✖ GET /health + GET /openapi.json (3.4158ms)
✖ Todo CRUD + persistence (0.819ms)
ℹ tests 2
ℹ suites 0
ℹ pass 0
ℹ fail 2
ℹ cancelled 0
ℹ skipped 0
ℹ todo 0
ℹ duration_ms 57.5023

✖ failing tests:

test at tests\oracle.test.js:39:1
✖ GET /health + GET /openapi.json (3.4158ms)
  C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\node-api-oracle_run_02\workspace\src\server.js:34
        };
         ^
  
  SyntaxError: Unexpected token ';'
      at wrapSafe (node:internal/modules/cjs/loader:1692:18)
      at Module._compile (node:internal/modules/cjs/loader:1735:20)
      at Object..js (node:internal/modules/cjs/loader:1893:10)
      at Module.load (node:internal/modules/cjs/loader:1481:32)
      at Module._load (node:internal/modules/cjs/loader:1300:12)
      at TracingChannel.traceSync (node:diagnostics_channel:328:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
      at Module.require (node:internal/modules/cjs/loader:1504:12)
      at require (node:internal/modules/helpers:152:16)
      at startServer (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\node-api-oracle_run_02\workspace\tests\oracle.test.js:13:15)

test at tests\oracle.test.js:59:1
✖ Todo CRUD + persistence (0.819ms)
  C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\node-api-oracle_run_02\workspace\src\server.js:34
        };
         ^
  
  SyntaxError: Unexpected token ';'
      at wrapSafe (node:internal/modules/cjs/loader:1692:18)
      at Module._compile (node:internal/modules/cjs/loader:1735:20)
      at Object..js (node:internal/modules/cjs/loader:1893:10)
      at Module.load (node:internal/modules/cjs/loader:1481:32)
      at Module._load (node:internal/modules/cjs/loader:1300:12)
      at TracingChannel.traceSync (node:diagnostics_channel:328:14)
      at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
      at Module.require (node:internal/modules/cjs/loader:1504:12)
      at require (node:internal/modules/helpers:152:16)
      at startServer (C:\Users\atrep\Desktop\Test_AI_Code\shumilek\projects\bot_eval_run\batch_1770643297744\node-api-oracle_run_02\workspace\tests\oracle.test.js:13:15)
